--- a/_config.yml
+++ b/_config.yml
@@ -132,6 +132,9 @@ comments:
     repository  : b2eeze.github.io # GitHub repo
     owner       : b2eeze # GitHub repo owner
     admin: ['b2eeze'] # GitHub repo owner and collaborators, only these guys can initialize GitHub issues, IT IS A LIST.
+    id: 
+      - "2018-06-01-header-image"
+      - "2018-07-01-welcome"
       # - your GitHub Id
 
   ## Valine
