--- a/_config.yml
+++ b/_config.yml
@@ -119,10 +119,8 @@ sharing:
 ##############################
 comments:
   provider: disqus # false (default), "disqus", "gitalk", "valine", "custom"
-
-  ## Disqus
   disqus:
-    shortname: breeze-6 # the Disqus shortname for the site
+    shortname: b2eeze-github-io # the Disqus shortname for the site
 
   ## Gitalk
   # please refer to https://github.com/gitalk/gitalk for more info.
