--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "jekyll",
     "jekyll-site"
   ],
-  "author": "Tian Qi",
+  "author": "b2eeze",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/kitian616/issues"
